fix: overlapping text boxes made using Yomitan impossible

--- a/apps/web/src/components/MangaReader/MangaPage.module.css
+++ b/apps/web/src/components/MangaReader/MangaPage.module.css
@@ -1,4 +1,5 @@
 .container {
+  isolation: isolate;
   line-height: 0;
   position: relative;
 }
